--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Dev Containers
+.devcontainer
+*/dependabot.yml
+
+# Input files
+*.csv
+*.json
+*.txt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
